# wallet-ledger

./: .env.example  .gitignore  NOTES.md  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py
